--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 keywords = ["react", "typescript", "generation", "backend", "frontend"]
 categories = ["command-line-utilities", "development-tools", "web-programming", "config", "database"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+exclude = ["docs"]
 
 [dependencies]
 Inflector = "0.11.4"
