Rename (src, app) => (backend, frontend) respectively

--- a/template/.env.example
+++ b/template/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=secret
-DATABASE_URL=postgres://username:password@localhost
+DATABASE_URL=postgres://username:password@localhost/database
 
 RUST_BACKTRACE=1
 RUST_LOG=actix_web=trace
