--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -20,10 +20,11 @@
   },
   "scripts": {
     "start": "yarn tsync && react-scripts start",
-    "build": "yarn tsync && react-scripts build",
+    "build": "react-scripts build",
+    "fullstack": "yarn install && yarn concurrently --prefix-colors cyan,magenta --raw --kill-others -n backend,frontend \"cargo watch -x run -i frontend\" \"yarn start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "tsync": "../tsync.sh"
+    "tsync": "../bin/tsync.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "concurrently": "^6.2.1"
   }
 }
