--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -24,7 +24,7 @@
     "fullstack": "yarn install && yarn concurrently --prefix-colors cyan,magenta --kill-others -n backend,frontend \"cargo --color always watch -x run -i frontend\" \"yarn start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "tsync": "../bin/tsync.sh"
+    "tsync": "tsync -i ../backend -o ./src/types/rust.d.ts"
   },
   "eslintConfig": {
     "extends": [
