--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.0",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -22,7 +18,7 @@
     "start": "yarn tsync && react-scripts start",
     "build": "react-scripts build",
     "fullstack": "yarn install && yarn concurrently --prefix-colors cyan,magenta --kill-others -n backend,frontend \"cargo --color always watch -x run -i frontend\" \"yarn start\"",
-    "test": "react-scripts test",
+    "test": "npx playwright test",
     "eject": "react-scripts eject",
     "tsync": "tsync -i ../backend -o ./src/types/rust.d.ts"
   },
@@ -46,6 +42,11 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "@playwright/test": "^1.17.1",
     "concurrently": "^6.2.1"
   }
 }
