--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -12,24 +12,36 @@ categories = ["command-line-utilities", "development-tools", "web-programming", 
 
 [dependencies]
 dotenv = "0.15.0"
-tracing-subscriber = "0.3.5"
 serde_json = "1.0.74"
 lettre = "0.9.6"
 lettre_email = "0.9.4"
 
 # optional dependencies
-tsync = {optional=true, version="1.2.1"}
-chrono = {optional=true,version = "0.4.19", features = ["serde"]}
-argonautica = {optional=true, version="0.2.0"}
-jsonwebtoken = {optional=true, version="7.2.0"}
-poem = {optional=true,version="1.2.33", features=["anyhow", "cookie", "static-files"]}
-serde = {optional=true,version = "1.0.133", features = ["derive"]}
-anyhow = {optional=true, version="1.0.52"}
+tsync = { optional=true, version="1.2.1" }
+chrono = { optional=true, version = "0.4.19", features = ["serde"] }
+argonautica = { optional=true, version="0.2.0" }
+jsonwebtoken = { optional=true, version="7.2.0" }
+serde = { optional=true, version = "1.0.133", features = ["derive"] }
+anyhow = { optional=true, version="1.0.52" }
 diesel = { optional=true, version="1.4.8", default-features = false, features = ["postgres", "uuid", "r2d2", "chrono", "32-column-tables"] }
-diesel_migrations = {optional=true, version="1.4.0"}
+diesel_migrations = { optional=true, version="1.4.0" }
+
+# poem dependencies
+poem = { optional=true, version="1.2.33", features=["anyhow", "cookie", "static-files"] }
+
+# actix_web dependencies
+actix-files = { optional=true, version="0.5.0" }
+actix-http = { optional=true, version="2.2.0" }
+actix-web = { optional=true, version="3.3.2" }
+actix-web-httpauth = { optional=true, version="0.5.0" }
+derive_more = { optional=true, version="0.99.11" }
+futures-util = { optional=true, version="0.3.8" }
+env_logger = { optional=true, version= "0.8.1" }
 
 [features]
-default = ["plugin-dev", "plugin-auth", "plugin-container"]
-plugin-dev = ["poem", "diesel", "serde", "diesel_migrations"]
-plugin-container = []
-plugin-auth = ["poem", "diesel", "serde", "anyhow", "argonautica", "jsonwebtoken", "chrono", "tsync"]
+default = ["plugin_dev", "plugin_auth", "plugin_container"]
+plugin_dev = ["diesel", "serde", "diesel_migrations"]
+plugin_container = []
+plugin_auth = ["diesel", "serde", "anyhow", "argonautica", "jsonwebtoken", "chrono", "tsync"]
+backend_poem = ["poem"]
+backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-web-httpauth","derive_more", "futures-util", "env_logger"]
