Correct readme path in Cargo.toml

--- a/create-rust-app_cli/Cargo.toml
+++ b/create-rust-app_cli/Cargo.toml
@@ -4,7 +4,7 @@ description = "Set up a modern rust+react web app by running one command."
 version = "3.0.0"
 authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
 edition = "2018"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/Wulf/create-rust-app"
 license = "MIT OR Apache-2.0"
 keywords = ["react", "typescript", "generation", "backend", "frontend"]
