:package: Storage plugin!

--- a/create-rust-app_cli/template/.cargo/config
+++ b/create-rust-app_cli/template/.cargo/config
@@ -1,5 +1,6 @@
 [alias]
 fullstack="run --bin fullstack"
+tsync="run --bin tsync"
 
 [build]
-target-dir="backend/.build"
+target-dir=".cargo/.build"
