--- a/create-rust-app_cli/template/.env.example
+++ b/create-rust-app_cli/template/.env.example
@@ -1,4 +1,3 @@
 SECRET_KEY=secret
-DATABASE_URL=postgres://username:password@localhost/database
-
+DATABASE_URL=postgres://postgres:postgres@localhost/database
 RUST_BACKTRACE=1
