--- a/create-rust-app_cli/template-plugin-container/.dockerignore
+++ b/create-rust-app_cli/template-plugin-container/.dockerignore
@@ -1,8 +1,8 @@
 .env*
 .DS_Store
 
-/backend/.build
-/node_modules
+.cargo/.build
+frontend/node_modules
 frontend/.pnp
 frontend/**/*.pnp.js
 frontend/coverage
