--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "create-rust-app"
 description = "Set up a modern rust+react web app by running one command."
-version = "5.0.0"
+version = "5.1.0"
 edition = "2018"
 authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
 readme = "../README.md"
@@ -74,5 +74,6 @@ plugin_dev = ["diesel", "serde", "diesel_migrations"]
 plugin_container = []
 plugin_auth = ["diesel", "serde", "anyhow", "argonautica", "jsonwebtoken", "chrono", "tsync"]
 plugin_storage = [ "aws-config", "aws-types", "aws-endpoint", "aws-sdk-s3", "tokio", "futures-util", "http", "diesel", "diesel_derives", "serde", "uuid", "md5", "mime_guess", "base64" ]
+plugin_graphql = []
 backend_poem = ["poem"]
 backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-multipart", "actix-web-httpauth","derive_more", "futures", "env_logger"]
