--- a/create-rust-app_cli/Cargo.toml
+++ b/create-rust-app_cli/Cargo.toml
@@ -22,6 +22,9 @@ structopt = "0.3.22"
 toml = "0.5.8"
 tsync = "1.2.1"
 
+# check cli version
+update-informer = "0.5.0"
+
 # for qsync exclusively
 regex = "1.5.4"
 syn = { version = "1.0.75", features = ["full", "extra-traits", "parsing"] }
