Move bundles to its own folder, delete redundant files and react-script tests

--- a/create-rust-app_cli/template/frontend/package.json
+++ b/create-rust-app_cli/template/frontend/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -19,8 +16,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "fullstack": "yarn install && yarn concurrently --prefix-colors cyan,magenta --kill-others -n backend,frontend \"cargo --color=always watch -x run -w backend\" \"yarn start\"",
-    "test": "react-scripts test",
-    "test:e2e": "npx playwright test ./tests",
+    "test": "npx playwright test ./tests",
     "tsync": "tsync -i ../backend -o ./src/types/rust.d.ts"
   },
   "eslintConfig": {
@@ -43,7 +39,6 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.21.1",
-    "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
