--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -21,7 +21,7 @@ lettre_email = "0.9.4"
 tera = { version="1.15.0" }
 lazy_static = { version="1.4.0" }
 serde = { version = "1.0.137", features = ["derive"] }
-diesel = { version="1.4.8", default-features = false, features = ["postgres", "uuid", "r2d2", "chrono"] } # plugin_dev, plugin_auth
+diesel = { version="2.0.0-rc.1", default-features = false, features = ["postgres", "uuid", "r2d2", "chrono"] } # plugin_dev, plugin_auth
 
 ##
 ## PLUGINS
@@ -34,7 +34,7 @@ tsync = { optional=true, version="1.2.1" }
 chrono = { optional=true, version = "0.4.19", features = ["serde"] }
 
 # plugin_dev
-diesel_migrations = { optional=true, version="1.4.0" }
+diesel_migrations = { optional=true, version="2.0.0-rc.1" }
 
 # plugin_storage
 aws-config = { optional=true, version="0.8.0" }
