--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -15,13 +15,13 @@ categories = ["command-line-utilities", "development-tools", "web-programming", 
 ## COMMON / DEFAULT - required dependencies
 ##
 dotenv = "0.15.0"
-serde_json = "1.0.81"
+serde_json = "1.0.83"
 lettre = "0.9.6"
 lettre_email = "0.9.4"
-tera = { version="1.15.0" }
+tera = { version="1.17.0" }
 lazy_static = { version="1.4.0" }
-serde = { version = "1.0.137", features = ["derive"] }
-diesel = { version="2.0.0-rc.1", default-features = false, features = ["postgres", "uuid", "r2d2", "chrono"] } # plugin_dev, plugin_auth
+serde = { version = "1.0.143", features = ["derive"] }
+diesel = { version="2.0.0-rc.1", default-features = false, features = ["uuid", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] } # plugin_dev, plugin_auth
 
 ##
 ## PLUGINS
@@ -30,8 +30,8 @@ diesel = { version="2.0.0-rc.1", default-features = false, features = ["postgres
 # plugin_auth
 argonautica = { optional=true, version="0.2.0" }
 jsonwebtoken = { optional=true, version="7.2.0" }
-tsync = { optional=true, version="1.2.1" }
-chrono = { optional=true, version = "0.4.19", features = ["serde"] }
+tsync = { optional=true, version="1.3.0" }
+chrono = { optional=true, version = "0.4.22", features = ["serde"] }
 
 # plugin_dev
 diesel_migrations = { optional=true, version="2.0.0-rc.1" }
@@ -74,7 +74,7 @@ mime_guess = { optional=true, version="2.0.4" } # backend_poem, plugin_storage
 anyhow = { optional=true, version="1.0.57" } # backend_poem, plugin_auth
 
 [features]
-default = []
+default = [] # ["INTERNAL_DEV_DO_NOT_USE"]
 plugin_dev = ["diesel_migrations"]
 plugin_container = []
 plugin_auth = ["anyhow", "argonautica", "jsonwebtoken", "chrono", "tsync"]
@@ -82,3 +82,6 @@ plugin_storage = [ "aws-config", "aws-types", "aws-endpoint", "aws-sdk-s3", "tok
 plugin_graphql = []
 backend_poem = ["poem", "anyhow", "mime_guess"]
 backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-multipart", "actix-web-httpauth","derive_more", "futures", "env_logger"]
+database_sqlite = ["diesel/sqlite"]
+database_postgres = ["diesel/postgres"]
+INTERNAL_DEV_DO_NOT_USE = ["plugin_auth", "plugin_container", "plugin_dev", "plugin_graphql", "plugin_storage", "backend_actix-web", "database_sqlite"]
