--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -109,8 +109,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - ru
-n: rustup component add clippy
+      - run: rustup component add clippy
       - uses: actions/cache@v3.0.11
         with:
           path: |
