--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,6 +2,8 @@ name: Rust Continuous Integration
 on:
   workflow_dispatch:
   push:
+    branches: 
+      - "main"
     paths: 
       - "**.rs"
       - "Cargo.lock"
