--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,12 @@ updates:
     schedule:
       interval: "daily"
 
+  # Maintain dependencies for Yarn
+  - package-ecosystem: "npm"
+    directory: "./frontend"
+    schedule:
+      interval: "daily"
+      
   # Keep submodules updated
   - package-ecosystem: "gitsubmodule"
     directory: "./"
