--- a/docs/package.json
+++ b/docs/package.json
@@ -15,21 +15,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.8",
-    "@docusaurus/preset-classic": "2.0.0-beta.8",
-    "@mdx-js/react": "^1.6.21",
-    "@svgr/webpack": "^5.5.0",
-    "clsx": "^1.1.1",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@mdx-js/react": "^2.2.1",
+    "@svgr/webpack": "^6.5.1",
+    "clsx": "^1.2.1",
     "file-loader": "^6.2.0",
-    "prism-react-renderer": "^1.2.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.8",
-    "@tsconfig/docusaurus": "^1.0.4",
-    "typescript": "^4.3.5"
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "@tsconfig/docusaurus": "^1.0.6",
+    "typescript": "^4.9.4"
   },
   "browserslist": {
     "production": [
