--- a/create-rust-app_cli/Cargo.toml
+++ b/create-rust-app_cli/Cargo.toml
@@ -18,7 +18,7 @@ console = "0.15.5"
 dialoguer = "0.10.3"
 indoc = "1.0.8"
 rust-embed = "6.4.2"
-structopt = "0.3.26"
+clap = {version = "4.1", features = ["wrap_help", "derive", "cargo"]}
 toml = "0.5.11"
 tsync = "1"
 
