--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -55,6 +55,10 @@ uuid = { optional=true, version="1.2.2", features=["v4", "serde"] }
 md5 = { optional=true, version="0.7.0" }
 base64 = { optional=true, version="0.21.0" }
 
+# plugin_utoipa dependencies
+utoipa = { optional=true, version="3", features=["actix_extras", "chrono", "openapi_extensions"] }
+utoipa-swagger-ui = { optional=true, version="3", features=["actix-web"]}
+
 ##
 ## BACKENDS
 ##
@@ -80,12 +84,13 @@ anyhow = { optional=true, version="1.0.68" } # backend_poem, plugin_auth
 tokio = { optional=true, version = "1", features = ["full"] } # backend_poem, plugin-storage
 
 [features]
-default = ["backend_actix-web", "database_postgres", "plugin_auth", "plugin_container", "plugin_dev", "plugin_graphql", "plugin_storage"]
+default = ["backend_actix-web", "database_postgres", "plugin_auth", "plugin_container", "plugin_dev", "plugin_graphql", "plugin_storage", "plugin_utoipa"]
 plugin_dev = ["diesel_migrations"]
 plugin_container = []
 plugin_auth = ["anyhow", "rust-argon2", "rand", "jsonwebtoken", "chrono", "tsync"]
 plugin_storage = [ "aws-config", "aws-types", "aws-endpoint", "aws-sdk-s3", "tokio", "futures-util", "http", "diesel_derives", "uuid", "md5", "mime_guess", "base64" ]
 plugin_graphql = []
+plugin_utoipa = ["utoipa", "utoipa-swagger-ui", "backend_actix-web"]
 backend_poem = ["poem", "anyhow", "mime_guess", "tokio"]
 backend_actix-web = ["actix-web", "actix-http", "actix-files", "actix-multipart", "actix-web-httpauth","derive_more", "futures", "env_logger"]
 database_sqlite = ["diesel/sqlite", "libsqlite3-sys/bundled"]
