--- a/create-rust-app_cli/template/frontend/package.json
+++ b/create-rust-app_cli/template/frontend/package.json
@@ -11,10 +11,10 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": "yarn vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "fullstack": "yarn install && yarn concurrently --prefix-colors cyan,magenta --kill-others -n backend,frontend \"cargo --color=always watch -x run -w backend\" \"yarn start\"",
+    "start:dev": "npm install && vite",
     "test": "npx playwright test ./tests"
   },
   "eslintConfig": {
@@ -41,8 +41,16 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "ansi-to-react": "^6.1.6",
     "concurrently": "^7.6.0",
     "glob": "^8.1.0",
+    "reconnecting-websocket": "4.4.0",
     "vite": "^4.0.4"
+  },
+  "overrides": {
+    "ansi-to-react": {
+      "react": "^18",
+      "react-dom": "^18"
+    }
   }
 }
