--- a/create-rust-app_cli/qsync/Cargo.toml
+++ b/create-rust-app_cli/qsync/Cargo.toml
@@ -2,8 +2,8 @@
 name = "qsync"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Generate react-query hooks for your rust backend (see https://github.com/Wulf/create-rust-app)"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 Inflector = "0.11.4"
