--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -48,3 +48,159 @@ jobs:
         with:
           command:
             cargo build
+
+  Actix-Sqlite-All:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and all valid plugins
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+  
+  Actix-Sqlite-Container:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and the container plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=container test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Actix-Sqlite-Auth:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and the auth plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Actix-Sqlite-Storage:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and the storage plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=storage test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Actix-Sqlite-GraphQL:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and the graphql plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Actix-Sqlite-Utoipa:
+    needs: [Actix-Sqlite-None]
+    name: Actix w/ Sqlite and the utoipa plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,utoipa test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
