--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -47,3 +47,133 @@ jobs:
         with:
           command: build
 
+ 
+  Poem-Sqlite-All:
+    needs: [Poem-Sqlite-None]
+    name: Poem w/ Sqlite and all valid plugins
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Poem-Sqlite-Container:
+    needs: [Poem-Sqlite-None]
+    name: Poem w/ Sqlite and the container plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Poem-Sqlite-Auth:
+    needs: [Poem-Sqlite-None]
+    name: Poem w/ Sqlite and the auth plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Poem-Sqlite-Storage:
+    needs: [Poem-Sqlite-None]
+    name: Poem w/ Sqlite and the storage plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+
+  Poem-Sqlite-GraphQL:
+    needs: [Poem-Sqlite-None]
+    name: Poem w/ Sqlite and the graphql plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/cache@v3.2.5
+        with:
+          path: |
+            **/.cargo/.build
+            **/target
+          key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: run --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql test-project
+      - run: cd test-project
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
