--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -1,4 +1,4 @@
-name: CLI Continuous Integration (project compilation tests)
+name: CLI Continuous Integration (Compilation tests for variations of Actix + Sqlite)
 on:
   workflow_dispatch:
   push:
